# WebRTC_Video_Streaming

./: .gitignore  CMakeLists.txt  simple_peerconnection_server.py  simple_webrtc_client_stub.cpp
WebRTC_Video_Streaming/: CMakeLists.txt  simple_webrtc_client_stub.cpp
WebRTC_Video_Streaming/native_src/: conductor.cc  conductor.h  data_socket.h  defaults.cc  main.cc  main_wnd.cc  main_wnd.h  peer_channel.cc  peer_connection_client.cc  peer_connection_client.h
